--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
